# py-referee-dashboard

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  justfile  migration.md  project.md  pyproject.toml  sctl.toml
scripts/: import_notion.py
src/referee_dashboard/: app.py  config.py  db.py  export.py  import_data.py  models.py  validation.py
src/referee_dashboard/dashboard/: app.py
src/referee_dashboard/routes/: dashboard.py  data.py  games.py  leagues.py  teams.py  venues.py
src/referee_dashboard/static/css/: nord.css
src/referee_dashboard/views/: components.py  dashboard.py  data.py  games.py  layout.py  leagues.py  teams.py  venues.py
